[DEBUG] Updated docker-compose.yml: Added PostgreSQL database service Separated webpack service with its own Dockerfile Added healthchecks for services Added proper environment variables for database configuration Added volume for persistent database storage Added proper service dependencies Created Dockerfile.webpack: Separate Dockerfile for webpack service Uses Node.js 16 base image Proper npm installation and configuration Updated entrypoint.sh: Added database connection check Automatic database migrations Creates default admin user if not exists Made it executable with proper shebang Updated requirements.txt: Added PostgreSQL adapter Added CORS headers support Added Gunicorn for production-ready server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,48 @@ services:
     environment:
       - DEBUG=1
       - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+      - DB_NAME=v2cloud
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_HOST=db
+      - DB_PORT=5432
     depends_on:
+      - db
       - webpack
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   webpack:
-    build: ./app
+    build: 
+      context: ./app
+      dockerfile: Dockerfile.webpack
     command: npm run dev
     volumes:
       - ./app:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
     ports:
       - "3000:3000"
+
+  db:
+    image: postgres:13
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=v2cloud
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
