--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install --upgrade pip
 RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
 	
 RUN apt-get update && apt-get upgrade -y && \
-    apt-get install -y nodejs
+    apt-get install -y nodejs netcat-openbsd
 
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
@@ -16,7 +16,7 @@ COPY ./package.json /
 RUN npm install
 
 COPY ./entrypoint.sh /
-RUN chmod a+x /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
