feat: implement VM management system with React frontend
Major changes:
- Configure Docker networking between services
- Add VM model with SSH key field
- Implement RESTful API using DRF
- Create React-based VM table view
- Set up Webpack with Tailwind CSS

Technical details:
- Added separate frontend and backend networks
- Created VM serializer and viewset
- Implemented React components for VM display
- Added proper environment variables for cross-container communication
- Configured Webpack for React and CSS processing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,19 @@ services:
       - "8000:8000"
     environment:
       - DEBUG=1
-      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,web
       - DB_NAME=v2cloud
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_HOST=db
       - DB_PORT=5432
+      - WEBPACK_DEV_SERVER=http://webpack:3000
     depends_on:
       - db
       - webpack
+    networks:
+      - backend
+      - frontend
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
       interval: 30s
@@ -35,8 +39,11 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - API_URL=http://web:8000
     ports:
       - "3000:3000"
+    networks:
+      - frontend
 
   db:
     image: postgres:13
@@ -48,11 +55,17 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
+    networks:
+      - backend
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+networks:
+  backend:
+  frontend:
 
 volumes:
   postgres_data:
