--- a/app/package.json
+++ b/app/package.json
@@ -20,13 +20,15 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
-    "postcss": "^8.4.32",
+    "cssnano": "^7.0.6",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss": "^8.4.49",
     "postcss-loader": "^7.3.3",
     "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.16",
     "webpack": "^5.89.0",
     "webpack-bundle-tracker": "^1.8.1",
     "webpack-cli": "^5.1.4"
